src/msg/snapshots/tmi__msg__room_state__tests__parse_room_state_basic_full.snap
---
source: src/msg/room_state.rs
expression: "f(\"@emote-only=0;followers-only=-1;r9k=0;rituals=0;room-id=40286300;slow=0;subs-only=0 :tmi.twitch.tv ROOMSTATE #randers\")"
---
RoomState {
    channel: Channel(
        "#randers",
    ),
    channel_id: "40286300",
    emote_only: Some(
        false,
    ),
    followers_only: Some(
        Disabled,
    ),
    r9k: Some(
        false,
    ),
    slow: Some(
        Duration {
            secs: 0,
            nanos: 0,
        },
    ),
    subs_only: Some(
        false,
    ),
}
