src/msg/snapshots/tmi__msg__room_state__tests__parse_room_state_basic_full2.snap
---
source: src/msg/room_state.rs
expression: "f(\"@emote-only=1;followers-only=0;r9k=1;rituals=0;room-id=40286300;slow=5;subs-only=1 :tmi.twitch.tv ROOMSTATE #randers\")"
---
RoomState {
    channel: "#randers",
    channel_id: "40286300",
    emote_only: Some(
        true,
    ),
    followers_only: Some(
        Enabled(
            None,
        ),
    ),
    r9k: Some(
        true,
    ),
    slow: Some(
        5s,
    ),
    subs_only: Some(
        true,
    ),
}
