src/msg/snapshots/tmi__msg__room_state__tests__parse_room_state_partial_1.snap
---
source: src/msg/room_state.rs
expression: "f(\"@room-id=40286300;slow=5 :tmi.twitch.tv ROOMSTATE #randers\")"
---
RoomState {
    channel: Channel(
        "#randers",
    ),
    channel_id: "40286300",
    emote_only: None,
    followers_only: None,
    r9k: None,
    slow: Some(
        5s,
    ),
    subs_only: None,
}
