src/msg/snapshots/tmi__msg__room_state__tests__parse_room_state_partial_2.snap
---
source: src/msg/room_state.rs
expression: "f(\"@emote-only=1;room-id=40286300 :tmi.twitch.tv ROOMSTATE #randers\")"
---
RoomState {
    channel: Channel(
        "#randers",
    ),
    channel_id: "40286300",
    emote_only: Some(
        true,
    ),
    followers_only: None,
    r9k: None,
    slow: None,
    subs_only: None,
}
